# SignalScope

./: .gitignore  CMakeLists.txt  COMPILE.md  README.md  signalscope.ini
docs/: ADDING_A_DECODER.md
src/: main.cpp  version.h
src/audio/: audio_sink.cpp  audio_sink.h
src/core/: app.h  main_funcs.h
src/decode/: bch.h  decoder.cpp  decoder.h  decoder_manager.cpp  decoder_manager.h  message_log.h  pocsag_decoder.cpp  pocsag_decoder.h
src/decode/channel/: audio_decoder.cpp  channel_registry.h  ichannel_decoder.h  message_bus.h  nrsc5_decoder.cpp  oob_decoder.cpp  pager_decoder.cpp
src/decode/oob/: oob_core.cpp  oob_core.h
src/dsp/: am_nfm_demod.h  wfm_demod.h
src/gui/: gui_panels.cpp
src/multimon_ng/: demod_stubs.c  multimon_lib.c
src/sdr/: airspy_source.h  hackrf_source.h  libresdr_source.cpp  libresdr_source.h  rtl_sdr_source.h  sdrpp_server_source.h  wav_file_source.h
src/session/: session.cpp
src/signal/: processing.cpp
src/state/: config.cpp
src/update/: version_check.cpp
src/voice/: voice_ops.cpp
tools/: egc_inapp_test.cpp  fft_selftest.cpp  wrap_final.py
